--- a/romer.css
+++ b/romer.css
@@ -56,5 +56,9 @@
 
  h1, h2, h3, h4, h5, h6 {
    font-family: 'Josefin Sans', sans-serif;
-  
+
+ }
+ h1 {
+   font-size: 2rem;
+   color: #111;
  }
